<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout"
        tools:context=".SignInActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textInputLayout"
            android:layout_marginStart="60dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2" android:layout_marginTop="170dp">
        <android.support.design.widget.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:hint="@string/login_et_hint"
                android:id="@+id/login_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp" android:layout_marginStart="60dp"
            android:id="@+id/textInputLayout2" android:layout_marginBottom="200dp">
        <android.support.design.widget.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:hint="@string/password_et_hint"
                android:id="@+id/password_field"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/login_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/sign_in_button"
            android:layout_marginBottom="60dp"/>

</android.support.constraint.ConstraintLayout>