<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout"
        android:orientation="vertical"
        tools:context=".view.NewPostActivity">
    <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:theme="@style/Base.Theme.MaterialComponents.Light"
                android:layout_marginStart="8dp"
                android:maxLength="20"
                android:id="@+id/newsPost_title"
                android:hint="@string/title_hint"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
            app:layout_constraintBottom_toTopOf="@id/postButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp">
        <com.google.android.material.textfield.TextInputEditText
                android:theme="@style/Base.Theme.MaterialComponents.Light"
                android:layout_marginStart="8dp"
                android:maxLength="40"
                android:id="@+id/newsPost_description"
                android:layout_width="match_parent"
                android:hint="@string/description_hint"
                android:layout_height="80dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:id="@+id/card"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/postButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout"
            android:elevation="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="275dp"
            android:layout_height="275dp">
        <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/chooseButton"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/choose_button_text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/postButton" app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/post_button_text"
            android:id="@+id/postButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooseButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>